# tecmo-basketball-port

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  PORTING.md  README.md  build.ps1  port_iteration.json
docs/: arena_bank04_native_conversion.md  arena_intro_logic_port_plan.md  arena_native_assetpack_entries.md  arena_rom_only_import_gap.md  assetpack_import_workflow.md  gameplay-state-foundation.md  intro_presents_probe_plan.md  original_title_screen_plan.md  rom_only_import_next_steps.md
include/: asm_inventory.h  png_writer.h  tecmo_all_star_menu.h  tecmo_asset_pack.h  tecmo_asset_pack_import.h  tecmo_audio_output.h  tecmo_bank07.h  tecmo_controls.h  tecmo_framebuffer.h  tecmo_game.h  tecmo_gameplay_assets.h  tecmo_gameplay_audio.h  tecmo_gameplay_close_shots.h  tecmo_gameplay_court.h  tecmo_gameplay_dunk_cutaway.h  tecmo_gameplay_jump_shots.h  tecmo_gameplay_penalties.h  tecmo_gameplay_scene.h  tecmo_gameplay_shot_resolution.h  tecmo_gameplay_state.h  tecmo_intro_arena.h  tecmo_intro_arena_scene.h  tecmo_intro_finale.h  tecmo_intro_layout.h  tecmo_intro_license.h  tecmo_intro_post_arena.h  tecmo_intro_screen.h  tecmo_intro_stage.h  tecmo_intro_title.h  tecmo_intro_trace.h  tecmo_memory.h  tecmo_music.h  tecmo_nametable_screen.h  tecmo_nes_video.h  tecmo_preseason_menu.h  tecmo_season_menu.h  tecmo_start_game_menu.h  tecmo_team_data.h  tecmo_team_management.h  tecmo_title_screen.h
src/: asm_inventory.c  main.c  png_writer.c  tecmo_all_star_menu.c  tecmo_asset_pack.c  tecmo_asset_pack_import.c  tecmo_audio_output.c  tecmo_bank07.c  tecmo_controls.c  tecmo_flow_test.c  tecmo_game.c  tecmo_gameplay_assets.c  tecmo_gameplay_audio.c  tecmo_gameplay_close_shots.c  tecmo_gameplay_court.c  tecmo_gameplay_dunk_cutaway.c  tecmo_gameplay_jump_shots.c  tecmo_gameplay_penalties.c  tecmo_gameplay_scene.c  tecmo_gameplay_shot_resolution.c  tecmo_gameplay_state.c  tecmo_intro_arena.c  tecmo_intro_arena_scene.c  tecmo_intro_finale.c  tecmo_intro_layout.c  tecmo_intro_license.c  tecmo_intro_post_arena.c  tecmo_intro_screen.c  tecmo_intro_stage.c  tecmo_intro_title.c  tecmo_intro_trace.c  tecmo_memory.c  tecmo_music.c  tecmo_nametable_screen.c  tecmo_nes_video.c  tecmo_preseason_menu.c  tecmo_season_menu.c  tecmo_start_game_menu.c  tecmo_team_data.c  tecmo_team_management.c  (+2 more)
src/asset_pack/: tecmo_asset_pack_all_star.c  tecmo_asset_pack_all_star.h  tecmo_asset_pack_arena.c  tecmo_asset_pack_arena.h  tecmo_asset_pack_d9f6.c  tecmo_asset_pack_d9f6.h  tecmo_asset_pack_finale.c  tecmo_asset_pack_finale.h  tecmo_asset_pack_format.h  tecmo_asset_pack_gameplay.c  tecmo_asset_pack_gameplay.h  tecmo_asset_pack_gameplay_audio.c  tecmo_asset_pack_gameplay_audio.h  tecmo_asset_pack_gameplay_close_shots.c  tecmo_asset_pack_gameplay_close_shots.h  tecmo_asset_pack_gameplay_court.c  tecmo_asset_pack_gameplay_court.h  tecmo_asset_pack_gameplay_dunk_cutaway.c  tecmo_asset_pack_gameplay_dunk_cutaway.h  tecmo_asset_pack_gameplay_jump_shots.c  tecmo_asset_pack_gameplay_jump_shots.h  tecmo_asset_pack_gameplay_penalties.c  tecmo_asset_pack_gameplay_penalties.h  tecmo_asset_pack_gameplay_shot_resolution.c  tecmo_asset_pack_gameplay_shot_resolution.h  tecmo_asset_pack_import_layout.h  tecmo_asset_pack_music.c  tecmo_asset_pack_music.h  tecmo_asset_pack_opening.c  tecmo_asset_pack_opening.h  tecmo_asset_pack_post_arena.c  tecmo_asset_pack_post_arena.h  tecmo_asset_pack_preseason.c  tecmo_asset_pack_preseason.h  tecmo_asset_pack_reader.c  tecmo_asset_pack_season.c  tecmo_asset_pack_season.h  tecmo_asset_pack_source_map.c  tecmo_asset_pack_source_map.h  tecmo_asset_pack_start_menu.c  (+11 more)
tools/: Find-BootFirstScreenTrace.ps1  Find-IntroCompositeTrace.ps1  Find-IntroFirstSpriteTrace.ps1  Find-IntroProcedureMapping.ps1  Find-IntroRabbitLookup.ps1  Find-IntroTecmoLogoLookup.ps1  Find-NesReferenceIntro.ps1  Find-OriginalScreenSources.ps1  Find-TitleChrMapping.ps1  Find-TitleSetupMapping.ps1  Import-IntroArenaCapture.ps1  New-IntroLayoutDraft.ps1  Run-AssetPackTests.ps1  Run-GameplayAssetTests.ps1  Run-GameplayAudioTests.ps1  Run-GameplayCloseShotTests.ps1  Run-GameplayCourtTests.ps1  Run-GameplayDunkCutawayTests.ps1  Run-GameplayPenaltyTests.ps1  Run-GameplaySceneTests.ps1  Run-GameplayShotResolutionTests.ps1  Run-IntroSequenceTests.ps1  Run-MusicTests.ps1  Run-NativeFlowTests.ps1  Run-ScreenshotTests.ps1  Run-SeasonTests.ps1  Run-TeamDataTests.ps1  Run-TeamManagementTests.ps1  Run-Win32LaunchSmokeTest.ps1  Update-DesktopShortcut.ps1  emu_intro_arena_irq_watch.lua  emu_intro_first_sprite_watch.lua  emu_intro_memory_watch.lua
